Fixed top spacing for metric search result when in adhoc mode.

--- a/metrilyx/static/css/style.css
+++ b/metrilyx/static/css/style.css
@@ -1348,3 +1348,10 @@ li[ng-repeat="tagvalue in tagvalues|orderBy:'toString()'"]:last-child > a {
 .animate-if.ng-enter.ng-enter-active {
   opacity:1;
 }
+.metric-search-result {
+	border-bottom:1px solid #454545;
+	margin-top:112px;
+}
+.metric-search-result.adhoc {
+	margin-top:52px;
+}
